menu fixes for safira on iphone5

--- a/themes/reps/css/reps.css.less
+++ b/themes/reps/css/reps.css.less
@@ -265,7 +265,13 @@ body.reps {
         * {
           background: none;
         }
+      }
+      
+      #main-menu > * {
+        z-index: 100000 !important;
+        background: #ffffff !important;
       } // #main-menu END
+      
       .menu-breadcrumb .list-group-item {
         display: inline;
         background: none;
